# BNI-Tracker

./: .env.example  .gitignore  .prettierignore  CLAUDE.md  README.md  package-lock.json  package.json
.atl/: sdd-launcher.md
.claude/: settings.json
.github/workflows/: ci.yml
BNI Track MVP code/: Audios y Transcripciones - BNI Track - f23bc04782ed4870bf797635346832c4.html  Base de Conocimiento - BNI Track - 14d4ed084539409eb8708cdac9762b38.html  Búsqueda y Matching - BNI Track - 0d4bec53653642359ca3f3dafbbadca4.html  Configuración - BNI Track - af18028d181a4fca9e36964dd7e6c865.html  Contactos - BNI Track - 0444fe4e24234cdeaf562ef400c30aab.html  Dashboard BNI Track - de219d99fdaa445aa2075a15273339ed.html  Importar - Exportar - BNI Track - 3af4ba2d197940bc8d5618f2c08c27fc.html  Nueva Interacción - BNI Track - 65e3ced6b56043ae8a495c51e33a62e8.html  Perfil de Contacto - BNI Track - 9d77835c31ed4449805af7c02d2d0014.html
apps/web/: .eslintrc.cjs  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: config.test.mjs  config.ts
docs/: technical-foundation.md
infra/docker/: ai.Dockerfile  docker-compose.yml
openspec/: config.yaml
openspec/specs/platform-foundation/: spec.md
scripts/: check-env.mjs  smoke-web-ai.mjs
services/ai/: pyproject.toml
services/ai/app/: __init__.py  main.py
services/ai/app/api/: routes.py
services/ai/app/core/: config.py
services/ai/app/gateway/: contracts.py  factory.py  stub.py
services/ai/tests/: test_auth.py  test_config.py  test_gateway.py  test_validation.py
(+8 files in other folders)
