[project]
name = "bni-track-ai"
version = "0.1.0"
description = "Provider-agnostic AI service for BNI Track."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic-settings>=2.3.4",
  "uvicorn[standard]>=0.30.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "httpx2>=0.28.0",
  "ruff>=0.5.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["app", "tests"]
